--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,18 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>license-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.pitest</groupId>
+                <artifactId>pitest-maven</artifactId>
+                <configuration>
+                    <targetClasses>
+                        <param>com.codenjoy.dojo.sampletext.*</param>
+                    </targetClasses>
+                    <targetTests>
+                        <param>com.codenjoy.dojo.sampletext.*</param>
+                    </targetTests>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
