[sampletext][clients][java][elements-generator] Moved all elements info data to the info.properties file.

--- a/src/main/webapp/resources/sampletext/help/info.properties
+++ b/src/main/webapp/resources/sampletext/help/info.properties
@@ -19,7 +19,8 @@
 # <http://www.gnu.org/licenses/gpl-3.0.html>.
 # #L%
 ###
-game.sampletext.element=
+
+game.sampletext.element.NONE          =There are no elements for this game.
 
 game.sampletext.settings.WIN_SCORE    =[Score] Win score
 game.sampletext.settings.LOSE_PENALTY =[Score] Lose penalty
